<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Image Searcher</string>
  <string name="action_settings">Settings</string>
  <string name="title_activity_settings">SettingsActivity</string>
  <string name="hello_world">Hello world!</string>
  <string name="placeholder_image_search">Enter image search</string>
  <string name="title_search_button">Search</string>
  <string name="default_image_title">Image Title</string>
  <string name="title_activity_image_display">ImageDisplayActivity</string>
  <string name="title_image_size">Image Size</string>
  <string name="title_color_filter">Color Filter</string>
  <string name="title_image_type">Image Type</string>
  <string name="title_site_filter">Site Filter</string>
  <string name="prompt_image_size">Image Size</string>
  <string name="prompt_color_filter">Color Filter</string>
  <string name="prompt_image_type">Image Type</string>

</resources>
