<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codepath.marcferna.imagesearcher.activity.SettingsActivity">

  <Spinner
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/spImageSize"
    android:entries="@array/image_size_options"
    android:spinnerMode="dialog"
    android:prompt="@string/prompt_image_size"
    android:layout_toEndOf="@+id/tvImageTitle"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:layout_toRightOf="@+id/tvImageTitle"/>


  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/title_image_size"
    android:id="@+id/tvImageTitle"
    android:layout_alignBottom="@id/spImageSize"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/title_color_filter"
    android:id="@+id/tvColorFilter"
    android:layout_alignBottom="@+id/spColorFilter"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/title_image_type"
    android:id="@+id/tvImageType"
    android:layout_alignBottom="@+id/spImageType"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/title_site_filter"
    android:id="@+id/tvSiteFilter"
    android:layout_alignBottom="@+id/etSiteFilter"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"/>

  <Spinner
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:entries="@array/color_filter_options"
    android:spinnerMode="dialog"
    android:prompt="@string/prompt_color_filter"
    android:id="@+id/spColorFilter"
    android:layout_below="@+id/spImageSize"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:layout_toRightOf="@+id/tvColorFilter"
    android:layout_toEndOf="@+id/tvColorFilter"/>

  <Spinner
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:entries="@array/image_type_options"
    android:spinnerMode="dialog"
    android:prompt="@string/prompt_image_type"
    android:id="@+id/spImageType"
    android:layout_below="@+id/spColorFilter"
    android:layout_alignRight="@+id/etSiteFilter"
    android:layout_alignEnd="@+id/tvImageType"
    android:layout_toRightOf="@+id/tvImageType"
    android:layout_toEndOf="@+id/tvImageType"/>

  <EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/etSiteFilter"
    android:layout_toEndOf="@+id/tvSiteFilter"
    android:layout_below="@+id/spImageType"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"/>

</RelativeLayout>
